# amimono-demo-boutique

./: .gitignore  Cargo.toml  Dockerfile  README.md  amimono.toml  build.rs
src/: main.rs
src/adservice/: mod.rs
src/backend/: ad.rs  cart.rs  checkout.rs  currency.rs  email.rs  payment.rs  productcatalog.rs  products.json  recommendation.rs  shipping.rs
src/cartservice/: mod.rs  rpc.rs
src/checkoutservice/: mod.rs
src/currencyservice/: conversion.json  mod.rs  rpc.rs
src/emailservice/: mod.rs
src/frontend/: mod.rs
src/frontend/templates/: cart.html  checkout.html  footer.html  header.html  home.html  mod.rs  product.html
src/paymentservice/: mod.rs
src/productcatalogservice/: mod.rs
src/recommendationservice/: mod.rs
src/service/: checkout.rs  mod.rs  shipping.rs
src/shared/: mod.rs  money.rs  types.rs
src/shippingservice/: mod.rs  rpc.rs
static/: style.css
