[package]
name = "amimono-demo-boutique"
version = "0.1.0"
edition = "2024"

[dependencies]
amimono = { git = "https://github.com/aji/amimono.git" }
axum = { version = "0.8.7", features = ["form"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
env_logger = "0.11.8"
log = "0.4.28"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tinytemplate = "1.2.1"
tokio = "1.48.0"
tower-http = { version = "0.6.6", features = ["fs"] }
uuid = { version = "1.18.1", features = ["v4"] }
